tweek in index.html

--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Sample Text</title>
+	<title>ASCII Weekly Planner</title>
 	<meta charset="UTF-8">
+	<link rel="shortcut icon" type="image/x-icon" href="icon.png"/>
 	<script src="worker.js"></script>
 	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
