--- a/index.html
+++ b/index.html
@@ -64,5 +64,8 @@
 		<button type = "button" onClick = "execute()">Generate Schedule!</button>
 		<textarea id="output" type="text" class="outputField" readonly="readonly"></textarea>
 	</div>
+	<div class="credit">
+		<p>Created by Lam Bui. Contact via email at <a href="mailto:buiphuonglamvn@gmail.com">buiphuonglamvn@gmail.com</a></p>
+	</div>
 </body>
 </html>
