--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 	<title>ASCII Weekly Planner</title>
 	<meta charset="UTF-8">
 	<link rel="shortcut icon" type="image/x-icon" href="icon.png"/>
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
 	<script src="worker.js"></script>
 	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
@@ -90,6 +91,9 @@
 	</div>
 	<div class="credit">
 		<p>Created by Lam Bui. Contact via email at <a href="mailto:buiphuonglamvn@gmail.com">buiphuonglamvn@gmail.com</a></p>
+	</div>
+	<div class="counter">
+		<p id="visitorNumber">Visitor count: 100</p>
 	</div>
 </body>
 </html>
