--- a/index.html
+++ b/index.html
@@ -1,117 +1,179 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>ASCII Weekly Planner</title>
+	<title>Sample Text</title>
 	<meta charset="UTF-8">
-	<link rel="shortcut icon" type="image/x-icon" href="icon.png"/>
-	<link rel="stylesheet" type="text/css" href="style.css">
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-
-	<!--firebase initialization-->
-	<script src="https://www.gstatic.com/firebasejs/3.3.0/firebase.js"></script>
-	<script>
-		// Initialize Firebase
-		var config = {
-		apiKey: "AIzaSyD7TLw-cs9SN9o4OtDfvZrfA-RK-YKZsaM",
-		authDomain: "githubwebdatabase.firebaseapp.com",
-		databaseURL: "https://githubwebdatabase.firebaseio.com",
-		storageBucket: "githubwebdatabase.appspot.com",
-		};
-		firebase.initializeApp(config);
-	</script>
-	<!--end of such-->
-	
-	<script src="worker.js"></script>
-    
+	<script src="header.js"></script>
+	<script src="empty.js"></script>
+	<script src="shop.js"></script>
+	<script src="secret.js"></script>
+	<script src="chest.js"></script>
+	<script src="riddle.js"></script>
+	<script src="gamble.js"></script>
+	<script src="monster.js"></script>
+	<script src="trap.js"></script>
+	<script src="boss.js"></script>
+	<script src="map.js"></script>
+	<script src="player.js"></script>
+	<script src="inventory.js"></script>
+	<script src="init.js"></script>###
+	<!--<script src="keyboardControl.js"></script> Keyboard control to be added later-->
+	<link rel="stylesheet" type="text/css" href="styleSheet.css">
 </head>
 <body>
-
-	
-	<!--header of the page-->
-	<div class="header">
-		<p class="title">ASCII WEEKLY PLANNER</p>
-		<p>1. type in activities you have for each day into appropriate text boxes</p>
-		<p>2. fill out input fields right below to further customize your ASCII schedule</p>
-		<p>3. click 'Generate Schedule!' button and your ASCII WEEKLY PLANNER will be waiting below!!!</p>
-		<p>4. simply highlight and then do the ole copy-paste (CTRL-A, CTRL-C, CTRL-V for more time-saving)</p>
-		<p>5. all working font are monospace fonts. If a chosen font doesn't work (not properly aligned), it means you don't have it installed</p>
-	</div>
-
-	<!--day of the week-->
-	<div class="week">
-		<div>
-			<p>Monday:</p>
-			<textarea type="text" class="inputField" rows="10"></textarea>
+	<div class='intro'>
+		<div id='devNote'>
+			<p>Dev Note:</p>
+			<p id='version'>Ver: 1.00.<p>
+			<p>game is made my Lam 'PhthaloBlue' Bui</p>
+			When you rest or get unlucky with the riddles, there is a chance that the maze will re-shuffle, it may hang the browser for abit.
+			If the browser becomes unresponsive, just wait, and the game will be back and running in no time.
 		</div>
-		<div>
-			<p>Tuesday:</p>
-			<textarea type="text" class="inputField" rows="10"></textarea>
-		</div>
-		<div>
-			<p>Wednesday:</p>
-			<textarea type="text" class="inputField" rows="10"></textarea>
-		</div>
-		<div>
-			<p>Thursday:</p>
-			<textarea type="text" class="inputField" rows="10"></textarea>
-		</div>
-		<div>
-			<p>Friday:</p>
-			<textarea type="text" class="inputField" rows="10"></textarea>
-		</div>
-		<div>
-			<p>Saturday:</p>
-			<textarea type="text" class="inputField" rows="10"></textarea>
-		</div>
-		<div>
-			<p>Sunday:</p>
-			<textarea type="text" class="inputField" rows="10"></textarea>
+		<div class='inner'>
+			<div id='name'>100-Rooms</div>
+			<div id='introContent'>
+				<div class='introPara'>
+					<p id='beginIntro'>Welcome to 100-Rooms.</p>
+					<p> > Pricess Madeleine has been kidnapped by the blood-thirsty Demon. You are an adventurer who was sent to rescue the princess from the Demon's grasp. You managed to track down traces of the Demon and found an enormous Demon's castle. You entered the castle without hesitation...</p>
+					<p id='endIntro'>Find your way through the castle to kill the Demon and rescue Princess Madeleine.</p>
+				</div>
+				<input id='inputHeroName' value="Enter your hero's name."></input>
+				<div class='chooseDif'>
+					<div class='wrapper' id='easy'>
+						<textarea id='easyArt' type="text" class="outputField" rows='11'></textarea>
+						<button id='chooseEasy' onClick='easyMode();'>WIZARD!</button>		
+					</div>
+					<div class='wrapper' id='hard'>
+						<textarea id='hardArt' type="text" class="outputField" rows='11'></textarea>
+						<button id='chooseHard' onClick='startGame();'>KNIGHT!</button>
+					</div>
+				</div>
+				<textarea id='infoBox' type="text" class="outputField" rows='8'></textarea> 
+			</div>
 		</div>
 	</div>
-
-	<!--settings, customize stuff-->
-	<div class="setting">
-		<div>
-			<p>Column Size: </p>
-			<input type="text" id="boxLength" value="10">
-		</div>
-		<div>
-			<p>Font Size: </p>
-			<input type="text" id="fontSize" value="12">
-		</div>
-		<div>
-			<p>Font Selection: </p>
-			<select id="fontType" onchange="changeFont()">
-				<option>Courier</option>
-				<option>Arial Monospaced</option>
-				<option>Consolas</option>
-			    <option>Courier New</option>
-				<option>Droid Sans Mono</option>
-				<option>Everson Mono</option>
-			    <option>Lucida Console</option>
-				<option>Lucida Sans Typewriter</option>
-				<option>Lucida Typewriter</option>
-				<option>Monaco</option>
-				<option>Monospace</option>
-				<option>MS Gothic</option>
-				<option>Terminal</option>
-				<option>Ubuntu Mono</option>
-			</select>
-		</div>
-		<div>
-			<p>Whitespace Replacement: </p>
-			<input type="text" id="wsReplace" value=" ">
-		</div>
-	</div><br>
-	<div class="action">
-		<button type = "button" onClick = "execute()">Generate Schedule!</button>
-		<textarea id="output" type="text" class="outputField" readonly="readonly"></textarea>
+	<div class='playerInfo'>
+		<div id="name">player name</div>
+		<div id="gold">gold here</div>
+		<div id="HP">10 / 10</div>
+		<div id="dmg">1</div>
+		<div id="evasion">10%</div>
+		<div id="passiveItem">Equipment:</div>
+		<div id="inventoryItem">Backpack:</div>
 	</div>
-	<div class="credit">
-		<p>Created by Lam Bui. Contact via email at <a href="mailto:buiphuonglamvn@gmail.com">buiphuonglamvn@gmail.com</a></p>
+	<div class="main">
+		<div class='action'>
+			<button id='inspect' onClick='inspect()'>Inspect the room.</button>
+			<button id='blindWalk' onClick='blinkWalk()'>Fumble in the dark.</button>
+			<button id='openShop' onClick="openShop()">Talk</button>
+			<button id='openRiddle' onClick='openRiddle()'>Talk</button>
+			<button id='openGamble' onClick='openGamble()'>Talk</button>
+			<button id='openChest' onClick='openChest()'>Open the chest.</button>
+			<button id='jumpPit' onClick="jumpPit()">Jump!</button>
+			<button id='melee' onClick="melee()">Charge!!!</button>
+			<button id='arrow' onClick='shootArrow()'>Shoot arrow.</button>
+			<button id='bomb' onClick='useBomb()'>Throw explosive.</button>
+			<button id='potion1' onClick='useItem(this.id)'>Drink small potion.</button>
+			<button id='potion2' onClick='useItem(this.id)'>Drink large potion.</button>
+			<button id='torch' onClick='useItem(this.id)'>Light up torch.</button>
+			<button id='grapplingHook' onClick='useItem(this.id)'>Use grappling hook.</button>
+			<button id='fireResistantCloak' onClick='useItem(this.id)'>Put on fire-resistant cloak.</button>
+			<button id='shield' onClick='useItem(this.id)'>Held out shield.</button>
+			<button id='springLoadedBoots' onClick='useItem(this.id)'>Equip spring-loaded boots.</button>
+			<button id='flightSpell' onClick='useItem(this.id)'>Cast flight magic.</button>
+			<button id='waterSpell' onClick='useItem(this.id)'>Cast water magic.</button>
+			<button id='fireSpell' onClick='useItem(this.id)'>Cast fire magic.</button>
+			<button id="invisibleCloak" onClick='useItem(this.id)'>Put on invisible cloak.</button>
+			<button id='animatedWings' onClick='useItem(this.id)'>Wear animated wings.</button>
+			<button id='rescuePrincess' onClick='endGame(1)'>Strike down her chains!</button>
+		</div>
+		<div class='outputWrapper'>
+			<textarea id="outputInfo" type="text" class="outputField" readonly="readonly" rows="15" cols="116"></textarea>
+		</div>
+		<div class="navigation" draggable="true">
+			<button id='left' onClick="goInDirection(0)">Go Left</button>
+			<button id='up' onClick="goInDirection(1)">Go Up</button>
+			<button id='right' onClick="goInDirection(2)">Go Right</button>
+			<button id='down' onClick="goInDirection(3)">Go Down</button>
+			<button id='rest' onClick="rest()">Rest!</button>
+		</div>
 	</div>
-	<div class="counter">
-		<p id="visitorNumber">Visitor Counter:</p>
+	<textarea id="map" type="text" class="outputField" readonly="readonly" rows="35" cols="20"></textarea>
+	<div class='gameInfo'>
+		<div id='gameVersion'>ver. 1.00</div>
+		<div id='githubLink'><a href="https://github.com/lambui/savePrincess_textAdventure">>github page</a></div>
+		<div id='acknowledgement'><a href="acknowledgement.txt">acknowledgement.</a></div>
+	</div>
+	<div class="shop">
+		<div class='inner'>
+			<div id='name'>Shop</div>
+			<div id='content'>
+				<div class='itemName'>iron sword</div><button class='sellButton'>sell</button><button class='buyButton'>buy</button> <!-- sample -->
+				<div id="sellingItem">Backpack:</div>
+			</div>
+			<button id='exit' onClick="exitShop()">Exit.</button>
+		</div>
+		<div class='info'>
+			<div id='name'>Info</div>
+			<textarea id="outputInfoShop" type="text" class="outputField" readonly="readonly"></textarea>
+		</div>
+	</div>
+	<div class="gambleTable">
+		<div class='inner'>
+			<div id='name'>Game_Table</div>
+			<div id='tableContent'>
+				<textarea id='outputInfo2' type="text" class="outputField" ></textarea>
+				<div id="betArea">
+					<div id="betGold">1000</div>
+					<div id='controlButton'>
+						<button id="addGold" onClick='changeBetGold(0)'>+</button>
+						<button id="removeGold" onClick='changeBetGold(1)'>-</button>
+					</div>
+					<button id="startGamble" onClick='startGamble()'>Start</button>
+				</div>
+				<div id="choiceArea">
+				</div>
+			</div>
+			<button id='exit' onClick="exitTable()">Exit.</button>
+		</div>
+	</div>
+	<div class="riddleWindow">
+		<div class='inner'>
+			<div id='name'>Riddle_Question</div>
+			<div id='tableContent'>
+				<textarea id='outputInfo3' type="text" class="outputField" ></textarea>
+				<div id="riddleReply">
+					<div class='wrapper'>
+						<textarea id="replyArt1" type="text" class="outputField" readonly='readonly' rows="8" cols="15"></textarea>
+						<button id="reply1" onClick='chooseAnswer(this.id.substring("reply".length, this.id.length))'>Choose A</button>
+					</div>
+					<div class='wrapper'>
+						<textarea id="replyArt2" type="text" class="outputField" readonly='readonly' rows="8" cols="15"></textarea>
+						<button id="reply2" onClick='chooseAnswer(this.id.substring("reply".length, this.id.length))'>Choose B</button>
+					</div>
+					<div class='wrapper'>
+						<textarea id="replyArt3" type="text" class="outputField" readonly='readonly' rows="8" cols="15"></textarea>
+						<button id="reply3" onClick='chooseAnswer(this.id.substring("reply".length, this.id.length))'>Choose C</button>
+					</div>
+					<div class='wrapper'>
+						<textarea id="replyArt4" type="text" class="outputField" readonly='readonly' rows="8" cols="15"></textarea>
+						<button id="reply4" onClick='chooseAnswer(this.id.substring("reply".length, this.id.length))'>Choose D</button>
+					</div>
+				</div>
+			</div>
+			<button id='exit' onClick="exitRiddle()">Exit.</button>
+		</div>
+	</div>
+	<div class='end'>
+		<div class='inner'>
+			<div id='name'>The End!</div>
+			<div id='endContent'>
+				<textarea id='endArt' type="text" class="outputField" rows='11'></textarea> 
+				<textarea id='endInfoBox' type="text" class="outputField" rows='10'></textarea> 
+				<button id='replayButton' onClick='location.reload();'>Play again!</button>
+			</div>
+		</div>
 	</div>
 </body>
 </html>
