--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Sample Text</title>
+	<title>100 Rooms</title>
 	<meta charset="UTF-8">
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
 	<script src="header.js"></script>
@@ -17,7 +17,7 @@
 	<script src="map.js"></script>
 	<script src="player.js"></script>
 	<script src="inventory.js"></script>
-	<script src="init.js"></script>###
+	<script src="init.js"></script>
 	<!--<script src="keyboardControl.js"></script> Keyboard control to be added later-->
 	<link rel="stylesheet" type="text/css" href="styleSheet.css">
 </head>
