--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 		<div id='devNote'>
 			<p>Dev Note:</p>
 			<p id='version'>Ver: 1.00.<p>
-			<p>game is made my Lam 'PhthaloBlue' Bui</p>
+			<p>Made my Lam 'PhthaloBlue' Bui. Contact or report bug @ <a href="mailto:buiphuonglamvn@gmail.com?Subject=From%20100Rooms: ">buiphuonglamvn@gmail.com</a></p>
 			When you rest or get unlucky with the riddles, there is a chance that the maze will re-shuffle, it may hang the browser for abit.
 			If the browser becomes unresponsive, just wait, and the game will be back and running in no time.
 		</div>
@@ -103,7 +103,8 @@
 	<div class='gameInfo'>
 		<div id='gameVersion'>ver. 1.00</div>
 		<div id='githubLink'><a href="https://github.com/lambui/savePrincess_textAdventure">>github page</a></div>
-		<div id='acknowledgement'><a href="acknowledgement.txt">acknowledgement.</a></div>
+		<div id='acknowledgement'><a href="acknowledgement.txt">acknowledgement</a></div>
+		<div id='contact'><a href="mailto:buiphuonglamvn@gmail.com?Subject=From%20100Rooms:">Contact @ buiphuonglamvn@gmail.com</a></div>
 	</div>
 	<div class="shop">
 		<div class='inner'>
