--- a/index.html
+++ b/index.html
@@ -25,10 +25,11 @@
 	<div class='intro'>
 		<div id='devNote'>
 			<p>Dev Note:</p>
-			<p id='version'>Ver: 1.00.<p>
+			<p id='version'>Ver: 1.00. Visit <a href="https://github.com/lambui/savePrincess_textAdventure">github page.</a><p>
 			<p>Made my Lam 'PhthaloBlue' Bui. Contact or report bug @ <a href="mailto:buiphuonglamvn@gmail.com?Subject=From%20100Rooms: ">buiphuonglamvn@gmail.com</a></p>
 			When you rest or get unlucky with the riddles, there is a chance that the maze will re-shuffle, it may hang the browser for abit.
-			If the browser becomes unresponsive, just wait, and the game will be back and running in no time.
+			If the browser becomes unresponsive, just wait, and the game will be back running in no time.
+			<p><a href="acknowledgement.txt">Acknowledgement.</a></p>
 		</div>
 		<div class='inner'>
 			<div id='name'>100-Rooms</div>
